add auto complete on divisi

--- a/style2.css
+++ b/style2.css
@@ -80,3 +80,12 @@
 .card-footer {
   background-color: #174d5e;
 }
+
+.btn-register {
+  background-color: green !important;
+  color: white;
+}
+
+.btn-register:hover {
+  font-weight: bolder;
+}
