--- a/style2.css
+++ b/style2.css
@@ -114,6 +114,14 @@
   font-weight: bold;
 }
 
+.btn-download {
+  background-color: red !important;
+  color: white !important;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 5px;
+}
+
 .header-data {
   background-color: #125d72 !important;
   color: white;
